# nexus-cc

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_v5.md  CHANGELOG.md  README.md  ROADMAP.md  SPEC.md  SPEC_v2.md  SPEC_v3.md  ULTIMATE_GOAL.md  benchmark_nexus.py  demo_cross_session_learning.py  mypy.ini  nexus.py  nexus_core.py  pyproject.toml  test_loop.py  test_ralphloop_tdd.py  test_subagent_integration.py
.github/workflows/: ci.yml
.nexus/: policy.yaml.example
docs/: SUBAGENT_ARCH.md  competitive_analysis.md
docs/plans/: 2026-05-09-task-51-p6-auto-decompose.md
docs/superpowers/plans/: 2026-06-27-nexus-plan-first-redesign.md  2026-06-28-nexus-v11-implementation.md
docs/superpowers/specs/: 2026-06-27-nexus-plan-first-redesign-design.md  2026-06-28-nexus-v11-multi-agent-memory-design.md  2026-06-28-nexus-v12-mcp-server-design.md  2026-06-28-nexus-v12-model-router-design.md
nexus/: __init__.py
nexus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nexus/tools/: __init__.py  file_search.py
src/: __init__.py
src/agent/: control.py  events.py  evolution.py  plan.py  planner.py  prompts.py  runtime.py  verify_adapter.py  walker.py
src/agents/: __init__.py  base.py  default_registry.py  implementer.py  registry.py  reviewer.py  security.py  specifier.py
src/cli/: __init__.py  evolve.py  main.py  memory.py  migrate.py  prompt.py
src/cli/commands/: __init__.py  cost.py  mcp.py  model.py  run.py  session.py  skills.py  tui.py
src/context/: __init__.py  checkpoint.py  claudemd.py  memory.py  monitor.py  wal.py  wal_checkpoint_coordinator.py  working_buffer.py  worktree.py
src/engine/: __init__.py  executor.py  registry.py
src/hooks/: __init__.py  hook_manager.py  integration.py  post_tool_hook.py  pre_tool_hook.py  stop-hook.sh
src/llm/: __init__.py  client.py  cost_tracker.py  model_policy.py  model_router.py
src/mcp/: __init__.py  bridge.py  client.py  config.py  connection.py  integration.py  presets.py
src/ralphloop/: __init__.py  adaptive_reasoning.py  agent_loop.py  agent_pool.py  causal_error_graph.py  claude_md_loader.py  complexity.py  context_slice.py  decision_builder.py  dynamic_reasoning.py  error_isolation.py  executor.py  feedback_loop.py  feedback_loop_integration.py  harness_integration.py  implementation_context.py  orchestrator.py  phase_isolation.py  predictive_intervention.py  reasoning_signal.py  self_evolution.py  semantic_chunker.py  states.py  subagent_integration.py  subagent_registry.py  task_forest.py  task_graph.py  tdd_enforcer.py  transitions.py
src/self_evolution/: __init__.py  engine.py
src/session/: __init__.py  manager.py  models.py  store.py
src/skills/: __init__.py  author.py  capture.py  loader.py
src/tools/: __init__.py  base.py  bash.py  edit.py  git.py  glob.py  grep.py  read.py  registry.py  web_search.py  write.py
src/tui/: __init__.py  agent_view.py  app.py  approval.py  context_view.py  cost_panel.py  evolve_approval_modal.py  execution_panel.py  input_handler.py  memory_panel.py  model_mapping_modal.py  new_task_modal.py  nexus_tui.py  plan_panel.py  prompt_history_viewer_modal.py  recover_modal.py  skill_picker_modal.py  state_view.py  step_edit_modal.py  styles.tcss  task_view.py  tool_output_panel.py  verifier_panel.py
src/verification/: __init__.py  pipeline.py  review_gate.py  security_scan.py  tdd_gate.py  test_gate.py
tests/: __init__.py  conftest.py  test_cli.py  test_parallel_speedup.py  test_ralphloop_executor.py  test_scnet.py  test_scnet2.py  test_scnet_fixed.py  test_users.py
tests/agent/: test_control.py  test_events.py  test_evolution.py  test_on_failure.py  test_plan.py  test_plan_schema.py  test_planner.py  test_planner_arg_schema.py  test_planner_hint.py  test_planner_memory.py  test_prompts.py  test_runtime.py  test_runtime_post_walk.py  test_runtime_subplan.py  test_subplan.py  test_verify_adapter.py  test_verify_adapter_hint.py  test_walker.py  test_walker_ask_user.py  test_walker_critique.py  test_walker_hint.py  test_walker_pause.py  test_walker_verify.py
tests/agents/: test_default_registry.py  test_registry_spawn_tier.py  test_role_registry.py
tests/cli/: test_commands.py  test_cost_cli.py  test_ensure_nexus_policy.py  test_evolve_cli.py  test_migrate_cli.py  test_model_cli.py  test_prompt_cli.py
tests/context/: test_memory.py  test_wal.py  test_wal_v2.py
tests/fixtures/wal_v1/: failed.jsonl  multi_step.jsonl  simple.jsonl
tests/integration/: test_crash_recovery.py  test_llm_smoke_v11.py  test_migration.py  test_model_router_wired.py  test_plan_review_flow.py  test_real_llm_smoke.py  test_router_cost_wal.py  test_subplan_e2e.py  test_wal_backcompat.py
tests/llm/: test_cost_tracker.py  test_model_policy.py  test_model_router.py
tests/tools/: test_bash.py  test_edit.py  test_git.py  test_glob.py  test_grep.py  test_read.py  test_registry.py  test_registry_builder.py  test_web_search.py  test_write.py
tests/tui/: test_app.py  test_app_wiring.py  test_cost_panel.py  test_evolve_modal.py  test_execution_panel.py  test_modals.py  test_model_mapping_modal.py  test_new_panels.py  test_plan_panel.py  test_plan_panel_subplan.py  test_recover_modal.py  test_resolve_step_model.py  test_step_edit_modal.py  test_tool_output_panel.py
tests/verification/: test_pipeline_router.py
