[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "1.1.0"
description = "Next-Generation Autonomous Coding Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nexus Team"}
]
keywords = ["ai", "coding", "agent", "autonomous", "tdd", "self-improving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50",
    "anthropic>=0.40",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
]
embeddings = ["sentence-transformers>=2.0"]

[project.scripts]
# NOTE: `nexus` command requires: pip install -e .
# During development, use: python nexus.py
nexus = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",  # suppress enum warning from states.py
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["nexus"]
# Measure only the importable package; relative_files=true makes paths stable across CWDs
relative_files = true
# Files to skip during execution (still tracked if imported, but not as coverage targets)
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/_version.py",
    "src/nexus/mcp/*",          # thin transport wrappers, low signal
]

[tool.coverage.report]
# Show lines that were never executed
show_missing = true
# Skip 100%-covered files from the report for less noise
skip_covered = false
# Fail CI if total coverage drops below threshold
fail_under = 70
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "pass",
]
sort = "Cover"

[tool.coverage.paths]
source = ["src/nexus", "nexus"]
